# mediapipe-samples

./: pyproject.toml
mediapipe_samples/: main.py  pose_landmarker.py
