[tool.poetry]
name = "mediapipe-samples"
version = "0.1.0"
description = ""
authors = ["HotariTobu <hotari24tools@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mediapipe = "^0.10.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
